--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Berries</title>
+    <title>Berries Home</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
-  <body>
 
+  <body>
+  <header>
+    <h1>Berries</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Berries</a></li>
+        <li><a href="#">Resources</a></li>
+      </ul>
+    </nav>
+  </header>
   </body>
 </html>
