--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-  <header>
+  <header role="banner">
     <h1>Berries</h1>
-    <nav>
+    <nav role="navigation">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Berries</a></li>
@@ -17,5 +17,14 @@
       </ul>
     </nav>
   </header>
+
+  <main role="main">
+
+  </main>
+
+  <footer>
+    <small>© Berries</small>
+  </footer>
   </body>
+
 </html>
