--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Berries</h1>
     <nav role="navigation">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Berries</a></li>
         <li><a href="#">Resources</a></li>
       </ul>
@@ -22,7 +22,7 @@
 
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <small>© Berries</small>
   </footer>
   </body>
