--- a/berries/index.html
+++ b/berries/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Berries | Resources</title>
+    <title>Berries | All Berries</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
@@ -12,14 +12,14 @@
     <nav role="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="berries/index.html">Berries</a></li>
+        <li><a href="#">Berries</a></li>
         <li><a href="resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
 
   <main role="main">
-    <h1>Resources</h1>
+    <h1>Lots of berries—some you didn’t know!</h1>
 
   </main>
 
