--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Berries Home</title>
+    <title>Berries | Home</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
@@ -12,8 +12,8 @@
     <nav role="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Berries</a></li>
-        <li><a href="#">Resources</a></li>
+        <li><a href="berries/index.html">Berries</a></li>
+        <li><a href="resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
@@ -26,5 +26,4 @@
     <small>© Berries</small>
   </footer>
   </body>
-
 </html>
