--- a/resources.html
+++ b/resources.html
@@ -24,11 +24,11 @@
     <ul>
       <li><a href="https://en.wikipedia.org/wiki/Berry">https://en.wikipedia.org/wiki/Berry</a></li>
       <li><a href="https://en.wikipedia.org/wiki/Blueberry">https://en.wikipedia.org/wiki/Blueberry</a></li>
-      <li><a href="https://en.wikipedia.org/wiki/Grape"></a>https://en.wikipedia.org/wiki/Grape</li>
-      <li><a href="https://en.wikipedia.org/wiki/Redcurrant"></a>https://en.wikipedia.org/wiki/Redcurrant</li>
-      <li><a href="https://en.wikipedia.org/wiki/Banana"></a>https://en.wikipedia.org/wiki/Banana</li>
+      <li><a href="https://en.wikipedia.org/wiki/Grape">https://en.wikipedia.org/wiki/Grape</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Redcurrant">https://en.wikipedia.org/wiki/Redcurrant</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Banana">https://en.wikipedia.org/wiki/Banana</a></li>
       <li><a href="https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html">https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html</a></li>
-      <li><a href="https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html"></a>https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html</li>
+      <li><a href="https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html">https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html</a></li>
     </ul>
 
   </main>
