--- a/berries/index.html
+++ b/berries/index.html
@@ -11,15 +11,22 @@
     <strong>Berries</strong>
     <nav role="navigation">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Berries</a></li>
-        <li><a href="resources.html">Resources</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="index.html">Berries</a></li>
+        <li><a href="../resources.html">Resources</a></li>
       </ul>
     </nav>
   </header>
 
   <main role="main">
     <h1>Lots of berries—some you didn’t know!</h1>
+    <p>There are lots of berries in many different sizes & shapes. And, botanically, there are lots of berries that you don’t normally consider.</p>
+    <ul>
+      <li><a href="blueberries.html">Blueberries</a></li>
+      <li><a href="grapes.html">Grapes</a></li>
+      <li><a href="red-currents.html">Red Currents</a></li>
+      <li><a href="bananas.html">Bananas</a></li>
+    </ul>
 
   </main>
 
