--- a/berries/banana.html
+++ b/berries/banana.html
@@ -20,7 +20,8 @@
 
   <main role="main">
     <h1>Bananas</h1>
-
+    <img src="../images/bananas.jpg" alt="bananas">
+    <p>Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.</p>
   </main>
 
   <footer role="contentinfo">
