--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <h2>Berries, berries, oh my!</h2>
     <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
     <ul>
-      <li>Blueberries</li>
-      <li>Grapes</li>
-      <li>Red Currents</li>
-      <li>Bananas</li>
+      <li><a href="berries/blueberries.html">Blueberries</a></li>
+      <li><a href="berries/grapes.html">Grapes</a></li>
+      <li><a href="barries/red-currents.html">Red Currents</a></li>
+      <li><a href="berries/bananas.html">Bananas</a></li>
     </ul>
   </main>
   <footer role="contentinfo">
