Add main to Red Currants

--- a/berries/red-currents.html
+++ b/berries/red-currents.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Berries | Red Currents</title>
+    <title>Berries | Red Currants</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
@@ -19,8 +19,9 @@
   </header>
 
   <main role="main">
-    <h1>Red Currents</h1>
-
+    <h1>Red Currants</h1>
+    <img src="../images/red-currants" alt="Red Currants">
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
   </main>
 
   <footer role="contentinfo">
