--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <ul>
       <li><a href="berries/blueberries.html">Blueberries</a></li>
       <li><a href="berries/grapes.html">Grapes</a></li>
-      <li><a href="barries/red-currents.html">Red Currents</a></li>
+      <li><a href="barries/red-currants.html">Red Currants</a></li>
       <li><a href="berries/bananas.html">Bananas</a></li>
     </ul>
   </main>
