--- a/berries/bananas.html
+++ b/berries/bananas.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Berries | Bananas</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Berries | Bananas</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
 
-  <body>
+<body>
   <header role="banner">
     <strong>Berries</strong>
     <nav role="navigation">
@@ -20,12 +20,12 @@
 
   <main role="main">
     <h1>Bananas</h1>
-    <img src="../images/bananas.jpg" alt="bananas">
+    <img src="../images/bananas.jpg" alt="Bananas.">
     <p>Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.</p>
   </main>
 
   <footer role="contentinfo">
     <small>© Berries</small>
   </footer>
-  </body>
+</body>
 </html>
