--- a/berries/blueberries.html
+++ b/berries/blueberries.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Berries | Blueberries</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Berries | Blueberries</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
 
-  <body>
+<body>
   <header role="banner">
     <strong>Berries</strong>
     <nav role="navigation">
@@ -20,12 +20,12 @@
 
   <main role="main">
     <h1>Blueberries</h1>
-    <img src="../images/blueberries.jpg" alt="Blueberries">
+    <img src="../images/blueberries.jpg" alt="Blueberries.">
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
   </main>
 
   <footer role="contentinfo">
     <small>© Berries</small>
   </footer>
-  </body>
+</body>
 </html>
