--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Berries | Grapes</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Berries | Grapes</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
 
-  <body>
+<body>
   <header role="banner">
     <strong>Berries</strong>
     <nav role="navigation">
@@ -20,12 +20,12 @@
 
   <main role="main">
     <h1>Grapes</h1>
-    <img src="../images/grapes.jpg" alt="Grapes">
+    <img src="../images/grapes.jpg" alt="Grapes.">
     <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
   </main>
 
   <footer role="contentinfo">
     <small>© Berries</small>
   </footer>
-  </body>
+</body>
 </html>
