--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Berries | Red Currants</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Berries | Red Currants</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
 
-  <body>
+<body>
   <header role="banner">
     <strong>Berries</strong>
     <nav role="navigation">
@@ -19,13 +19,13 @@
   </header>
 
   <main role="main">
-    <h1>Red Currants</h1>
-    <img src="../images/red-currants" alt="Red Currants">
+    <h1>Red currants</h1>
+    <img src="../images/red-currants" alt="Red currants.">
     <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
   </main>
 
   <footer role="contentinfo">
     <small>© Berries</small>
   </footer>
-  </body>
+</body>
 </html>
