--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -20,7 +20,7 @@
 
   <main role="main">
     <h1>Red currants</h1>
-    <img src="../images/red-currants" alt="red-currants">
+    <img src="../images/red-currants" alt="These are red-currants.">
     <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
   </main>
 
